# csound-aeolus

./: .gitmodules  CMakeLists.txt  README.md  fresh-build.sh  install-dependencies.bash
doc/: csound_aeolus.tex
examples/: csound-aeolus-example.cpp  csound-aeolus-example.csd  csound-aeolus-example.py  csound_aeolus_test.csd
src/: audio.cc  audio.h  csound_aeolus.cpp  csound_audio.cc  csound_audio.h  tiface.cc  tiface.h
